--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.1",
+    "formik": "^2.2.6",
     "framer-motion": "^3.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -19,7 +20,8 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "swiper": "^6.4.10",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "yup": "^0.32.8"
   },
   "scripts": {
     "start": "react-scripts start",
